// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 32,26.4 60,21.6 Q 88,21.6 116,15.600000000000001"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={116}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 13.333333333333334,26.4 22.666666666666668,21.6 Q 32,21.6 41.333333333333336,15.600000000000001 Q 50.66666666666667,15.600000000000001 60,9.3 Q 69.33333333333334,9.3 78.66666666666667,10.125 Q 88,10.125 97.33333333333334,15.131250000000001 Q 106.66666666666667,15.131250000000001 116,21.1828125"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={60}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot without peak marker 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        d="M 4,26.4 Q 18,26.4 32,21.6 Q 46,21.6 60,15.600000000000001 Q 74,15.600000000000001 88,16.5 Q 102,16.5 116,21.525"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
